
SET(SRC_FILES
    main.cpp
)

SET(INCLUDE_DIRS
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${UTILITE_INCLUDE_DIRS}
    ${OpenCV_INCLUDE_DIRS}
	${CMAKE_CURRENT_SOURCE_DIR}/../include
	${CMAKE_CURRENT_SOURCE_DIR}/../src
	${ZLIB_INCLUDE_DIRS}
)

SET(LIBRARIES
    ${UTILITE_LIBRARIES}
	${OpenCV_LIBRARIES}
	${ZLIB_LIBRARIES}
)

INCLUDE_DIRECTORIES(${INCLUDE_DIRS})

ADD_EXECUTABLE(colorIndexesGenerator ${SRC_FILES})
TARGET_LINK_LIBRARIES(colorIndexesGenerator corelib ${LIBRARIES})

SET_TARGET_PROPERTIES( colorIndexesGenerator 
  PROPERTIES OUTPUT_NAME ${PROJECT_PREFIX}-colorIndexesGenerator)

INSTALL(TARGETS colorIndexesGenerator
        RUNTIME DESTINATION bin COMPONENT runtime
        LIBRARY DESTINATION lib COMPONENT devel
        ARCHIVE DESTINATION lib COMPONENT devel)

