
SET(SRC_FILES
    main.cpp
)

SET(INCLUDE_DIRS
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${UTILITE_INCLUDE_DIRS}
    ${OpenCV_INCLUDE_DIRS}
    ${FFTW3F_INCLUDE_DIRS} 
	${CMAKE_CURRENT_SOURCE_DIR}/../include
	${CMAKE_CURRENT_SOURCE_DIR}/../src
)

SET(LIBRARIES
    ${UTILITE_LIBRARIES}
	${OpenCV_LIBRARIES}
	${FFTW3F_LIBRARIES} 
)

INCLUDE_DIRECTORIES(${INCLUDE_DIRS})

ADD_EXECUTABLE(logPolar ${SRC_FILES})
TARGET_LINK_LIBRARIES(logPolar corelib ${LIBRARIES})

SET_TARGET_PROPERTIES( logPolar 
  PROPERTIES OUTPUT_NAME ${PROJECT_PREFIX}-logPolar)

INSTALL(TARGETS logPolar
        RUNTIME DESTINATION bin COMPONENT runtime
        LIBRARY DESTINATION lib COMPONENT devel
        ARCHIVE DESTINATION lib COMPONENT devel)

